--- a/WindowsForms_tulusa/WindowsForms_tulusa.csproj
+++ b/WindowsForms_tulusa/WindowsForms_tulusa.csproj
@@ -52,6 +52,9 @@
     <Compile Include="MinuOmaVorm.Designer.cs">
       <DependentUpon>MinuOmaVorm.cs</DependentUpon>
     </Compile>
+    <Compile Include="OmaVorm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -77,6 +80,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="birds.wav" />
+    <Content Include="mixkit.wav" />
     <Content Include="tthk.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
